--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,40 @@ header{
     border: solid 3px black;
 }
 
-.navegacion{
+.color{
+    color: rgb(146, 145, 145);
+}
+
+.navbar navbar-expand-lg navbar-light{
+    background-image: url(../imagenes/fondo-negro.jpeg);
+}
+
+.navbar-brand{
+    padding: 20px;
+    font-family:'Staatliches', cursive;
+    font-size: 3.5rem;
+    color: aliceblue;
+}
+
+.nav-link{
+    font-size: 2.3rem;
+    font-family:'Staatliches', cursive;
+    padding: 5px;
+    text-decoration: none;
+    color:aliceblue;
+}
+
+.nav-link:hover{
+    color: rgb(200, 24, 24);
+}
+
+.navbar-toggler{
+    color: rgb(200, 24, 24);
+    background-color: white;
+}
+
+
+/**.navegacion{
     display: flex;
     justify-content: space-between;
     align-items:  center;
@@ -65,7 +98,7 @@ header{
 .indice:hover{
     background-color: rgb(200, 24, 24);
 }
-    
+**/
 
 .seleccion{
     display: flex;
