--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,11 @@
+@import "variables";
+@import "combos";
+@import "horarios";
+@import "precios";
+@import "contacto";
+@import "proximos-estrenos";
+@import "variables";
+
 html{
     font-size: 62.5%;
 }
@@ -13,7 +21,7 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     background-position: 100%;
-
+}
 
     header{
         background-image: url(../imagenes/fondo-negro.jpeg);
@@ -22,11 +30,11 @@ body{
         .bg-body-tertiary{
             background-image: url(../imagenes/fondo-negro.jpeg)!important;
             .navbar__button{
-                color: rgb(200, 24, 24);
+                color: $colorPrincipal;
                 background-color: white;
             }
             a.navbar__logo{
-                font-family:'Staatliches', cursive;
+                font-family: $letraPrincipal;
                 font-size: 3.5rem;
                 color: aliceblue;
                 .color__1{
@@ -37,39 +45,37 @@ body{
                 }
             }
         }
-    }
             a.navbar__link{
                 font-size: 2.3rem;
-                font-family:'Staatliches', cursive;
+                font-family: $letraPrincipal;
                 text-decoration: none;
                 color:aliceblue;
                     &:hover{
-                        color: rgb(200, 24, 24);
+                        color: $colorPrincipal;
                     }
             }
+    }
+
+    .seleccion{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+        height: 30px;
+        outline: solid 3px rgb(66, 65, 65);
+        .menu a{
+            font-size: 20px;
+            color: black;
+            font-family: 'Arial';
+            background-color: grey;
+            height: 200px;
+            width: 200px;
+            border-radius: 10%; 
+            text-decoration: none; 
+            align-self: center;
         }
-        
-        
-        .seleccion{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            background-color: black;
-            height: 30px;
-            outline: solid 3px rgb(66, 65, 65);
-            .menu a{
-                font-size: 20px;
-                color: black;
-                font-family: 'Arial';
-                background-color: grey;
-                height: 200px;
-                width: 200px;
-                border-radius: 10%; 
-                text-decoration: none; 
-                align-self: center;
-            }
-        }
-            
+    }
+
     .caja{
         background-image: url(../imagenes/fondo-blanco.jpeg);
         margin-right: 15%;
@@ -81,7 +87,7 @@ body{
             .bloque__cartelera{
                 background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
                 color: white;
-                font-family: 'Staatliches', cursive;
+                font-family: $letraPrincipal;
                 font-size: 3rem;
                 text-align: center;
                 margin:0px 0px;
@@ -125,41 +131,41 @@ body{
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
                     }
-                    .imagen__5{
+                .imagen__5{
                     width: 100%;
                     height: 90%;
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
-                    }
+                }
 
-                    .imagen__6{
+                .imagen__6{
                     width: 100%;
                     height: 90%;
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
-                    }
+                }
 
-                    .imagen__7{
+                .imagen__7{
                     width: 100%;
                     height: 90%;
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
-                    }
+                }
 
-                    .imagen__8{
+                .imagen__8{
                     width: 100%;
                     height:90%;
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
-                    }
+                }
 
-                    .imagen__9{
+                .imagen__9{
                     width: 100%;
                     height: 90%;
                     margin-left: 3%;
                     box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
-                    }
                 }
+            }
             
             .sinopsis {
                 grid-area: sinopsis;
@@ -169,7 +175,7 @@ body{
                 justify-self: start;
                 margin: 30px;
                 .titulo__pelicula{
-                    font-family: 'Staatliches', cursive;
+                    font-family: $letraPrincipal;
                     font-size: 3rem;
                 }
                 p{
@@ -179,7 +185,7 @@ body{
                     width: 90px;
                     background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
                     color: white;
-                    font-family: 'Staatliches', cursive;
+                    font-family: $letraPrincipal;
                     font-size: 2rem;
                     padding: 10px;
                 }
@@ -194,8 +200,8 @@ body{
                     width: 100%;
                 }
                 .subtitulo{
-                    font-family: 'Staatliches', cursive;
-                    color: rgb(200, 24, 24);
+                    font-family: $letraPrincipal;
+                    color: $colorPrincipal;
                     padding: 3px 0px;
                 }
             }
@@ -207,6 +213,7 @@ body{
             }
         }
     }
+
 
     footer{
         background-image: url(../imagenes/fondo-negro.jpeg);
@@ -245,345 +252,6 @@ body{
     }
     /** FIN CARTELERA **/
 
-    /** HORARIOS **/
-    .bloque{
-        position: sticky;
-        top: 0;
-        .bloque__horarios{
-            background-color: rgb(66, 65, 65);
-            background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-            color: white;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            text-align: center;
-            border-top: solid 5px black;
-            border-bottom: solid 5px black;
-        }
-    }
-    .horarios{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-areas: 
-        "horarios__1 horarios__2 horarios__3"
-        "horarios__4 horarios__5 horarios__6"
-        "horarios__7 horarios__8 horarios__9";
-        grid-gap: 10px;
-        .horarios__1_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__1;    
-        }
-        .horarios__2_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__2;
-        }
-        
-        .horarios__3_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__3;
-        }
-        
-        .horarios__4_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__4;
-        }
-        
-        .horarios__5_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__5;
-        }
-        
-        .horarios__6_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__6;
-        }
-        
-        .horarios__7_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__7;
-        }
-        
-        .horarios__8_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__8;
-        }
-        
-        .horarios__9_img{
-            width: 100%;
-            height: 90%;
-            grid-area: horarios__9;
-        }
-        .horarios__p{
-            font-family: 'Staatliches', cursive;
-            width: 100%;
-            font-size: 1.5rem;
-            border:dashed 3px black;
-            padding: 5px;
-            text-align: center;
-            .funciones{
-                background-color: black;
-                color: whitesmoke;
-                border-radius: 3px;
-                margin: 1px;
-                &:hover{
-                    background-color: rgb(200, 24, 24);
-                }
-            }
-        }
-    }
-    /** FIN HORARIOS **/
-    /** COMBOS **/
-    .bloque-combos{
-        position: sticky;
-        top: 0;
-        .bloque__combos{
-            background-color: rgb(66, 65, 65);
-            background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-            color: white;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            text-align: center;
-            border-top: solid 5px black;
-            border-bottom: solid 5px black;
-        }
-    }
-    
-    .combos{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-areas:
-        "combo1 combo2"
-        "combo3 combo4";
-        justify-content: center;
-        justify-items: center;
-        margin-bottom: 15px;
-        .combos__1{
-            grid-area: combo1;
-        }
-        
-        .combos__2{
-            grid-area: combo2;
-        }
-        
-        .combos__3{
-            grid-area: combo3;
-        }
-        
-        .combos__4{
-            grid-area: combo4;
-        }
-        .horarios__p{
-            font-family: 'Staatliches', cursive;
-            width: 100%;
-            font-size: 1.5rem;
-            border:dashed 3px black;
-            padding: 5px;
-            text-align: center;
-        }
-    }
-    /** FIN COMBOS **/
-    /** PRECIOS **/
-    .precios{
-        position: sticky;
-        top: 0;
-        .bloque__precios{
-            background-color: rgb(66, 65, 65);
-            background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-            color: white;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            text-align: center;
-            border-top: solid 5px black;
-            border-bottom: solid 5px black;
-        }
-    }
-    .precios-pagos{
-        display: flex;
-        justify-content:space-around;
-        align-items: center;
-        .parrafo{
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            border:dashed 3px black;
-            padding: 3px;
-            display: inline-block;
-        }
-    }
-    .tabla__precios{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: 30px;
-        table{
-            background-color: grey;
-            border: solid 1px black;
-            color: aliceblue;
-            table-layout: fixed;
-            border-collapse: collapse;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            tr{
-                &:hover{
-                    background-color: rgb(255, 0, 0);
-                }
-                th{
-                    background-color: black;
-                    padding: 20px 15px;
-                    text-transform: uppercase;
-                    &:hover{
-                        background-color: brown;
-                    }
-                }
-                td{
-                    padding:15px;
-                    border-bottom: solid 1px;
-                    &:hover{
-                        background-color: tomato; 
-                    }
-                }
-            }
-        }
-        .medios{
-            width: 100%;
-            display: inline-block;
-            margin: 40px;
-            table{
-                background-color: grey;
-                border: solid 1px black;
-                color: aliceblue;
-                table-layout: fixed;
-                border-collapse: collapse;
-                font-family: 'Staatliches', cursive;
-                font-size: 3rem;
-                tr{
-                    &:hover{
-                        background-color: rgb(255, 0, 0);
-                    }
-                    th{
-                        background-color: black;
-                        padding: 20px 15px;
-                        text-transform: uppercase;
-                        &:hover{
-                            background-color: brown;
-                        }
-                    }
-                }
-            }
-        }
-    }
-    /** FIN PRECIOS **/
-    /** PROXIMOS ESTRENOS **/
-    .cartelera{
-        position: sticky;
-        top: 0;
-        .bloque__proximos-estrenos{
-            background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-            color: white;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            text-align: center;
-            margin:0px 0px;
-            border-top: solid 5px black;
-            border-bottom: solid 5px black;
-        }
-    }
-    .h-100{
-        height: 600px!important;
-    }
-    /** FIN PROXIMOS ESTRENOS **/
-    /** CONTACTO **/
-    .bloque-contacto{
-        position: sticky;
-        top: 0px;
-        .bloque__contacto{
-            background-color: rgb(66, 65, 65);
-            background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-            color: white;
-            font-family: 'Staatliches', cursive;
-            font-size: 3rem;
-            text-align: center;
-            border-top: solid 5px black;
-            border-bottom: solid 5px black;
-        }
-    }
-    .parrafo-consultas{
-        font-family: 'Staatliches', cursive;
-        font-size: 3rem;
-        border:dashed 3px black;
-        padding: 3px;
-        display: inline-block;
-        margin-left: 180px;
-    }
-    .contacto{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin-top: -30px;
-        margin-left: 40px;
-        .consultas{
-            margin-left: 20px;
-            table{
-                background-color: grey;
-                border: solid 1px black;
-                color: aliceblue;
-                table-layout: fixed;
-                border-collapse: collapse;
-                font-family: 'Staatliches', cursive;
-                font-size: 3rem;
-                th{
-                    background-color: black;
-                    padding: 20px 15px;
-                    text-transform: uppercase;
-                    .item-consulta{
-                        text-decoration: none;
-                        color: white;
-                    }
-                }
-            }
-            .consultas__2{
-                margin:10px 15px;
-            }
-        }
-    }
-    form{
-        background-color: white;
-        padding: 10px;
-        width: 30%;
-        color: black;
-        border: dashed 3px black;
-        font-family: 'Staatliches', cursive;
-        margin-bottom: 30px;    
-        ul{
-            padding: 0px;
-            li{
-                list-style: none;
-                padding: 1px;
-                input, textarea{
-                    width: 100%;
-                    height: 80%;
-                }
-            }
-            .boton{
-                width: 90px;
-                background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-                color: white;
-                font-family: 'Staatliches', cursive;
-                font-size: 2rem;
-                padding: 10px;
-            }  
-        }
-    }
-
-/** FIN CONTACTOS **/
 /** MQ **/
 /** TABLET **/
 @media screen and (max-width: 768px){
@@ -627,36 +295,36 @@ body{
     .parrafo-consultas{
         margin-left: 120px;
     }
-
 }
 
     /** MOBILE **/
-@media screen and (max-width: 500px){
-    .contenedorTotal{
-        grid-template-columns: 0.7fr 1fr;
-        grid-template-rows: 0.5fr;
-        grid-template-areas: 
-        "imagen caracteristicas"
-        "sinopsis sinopsis";
-        margin-top: 20px;
-        .img-1{
-            margin-left: 30px;
-            height: 70%;
-            align-self: center;
+    @media screen and (max-width: 500px){
+        .caja{
+            .contenedorTotal{
+                grid-template-columns: 0.7fr 1fr;
+                grid-template-rows: 0.5fr;
+                grid-template-areas: 
+                    "imagen caracteristicas"
+                    "sinopsis sinopsis";
+                margin-top: 20px;
+                .img-1{
+                    grid-area: imagen;
+                    margin-left: 30px;
+                    height: 70%;
+                    align-self: center;
+                }
+                .caracteristicas{
+                    grid-area: caracteristicas;
+                }
+                .sinopsis{
+                    grid-area: sinopsis;
+                }
+                .video{
+                    display: none;
+                }
+            }
         }
-        .caracteristicas{
-            grid-area: caracteristicas;
-        }
-    
-        .sinopsis{
-            grid-area: sinopsis;
-        }
-    
-        .video{
-            display: none;
-        }
-    }
-
+        
     .horarios{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(5, 1fr);
@@ -719,6 +387,9 @@ body{
         }
     }
 
+    .h-100{
+        height: 300px !important;
+    }
     .combos{
         display: grid;
         grid-template-columns: 1fr;
@@ -766,5 +437,3 @@ body{
         display: none;
     }
 }
-
-
