--- a/css/estilos.css
+++ b/css/estilos.css
@@ -424,9 +424,9 @@ header a.navbar__link:hover {
 .caja .contenedorTotal .img-1 .imagen__1 {
   width: 100%;
   height: 90%;
-  margin-top: 30px;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
   margin-left: 3%;
+  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  margin-top: 10%;
 }
 .caja .contenedorTotal .img-1 .imagen__2 {
   width: 100%;
