--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 .bloque-combos {
   position: sticky;
   top: 0;
+  z-index: 3;
 }
 .bloque-combos .bloque__combos {
   background-color: rgb(66, 65, 65);
@@ -34,18 +35,24 @@
 .combos .combos__4 {
   grid-area: combo4;
 }
-.combos .horarios__p {
+.combos .combos__p {
   font-family: "Staatliches", cursive;
   width: 100%;
   font-size: 1.5rem;
   border: dashed 3px black;
   padding: 5px;
   text-align: center;
+  margin-top: 10px;
+  background-color: #f5b528;
+}
+.combos .combos-imagen {
+  border: dashed 3px black;
 }
 
 .bloque {
   position: sticky;
   top: 0;
+  z-index: 3;
 }
 .bloque .bloque__horarios {
   background-color: rgb(66, 65, 65);
@@ -64,51 +71,61 @@
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas: "horarios__1 horarios__2 horarios__3" "horarios__4 horarios__5 horarios__6" "horarios__7 horarios__8 horarios__9";
   grid-gap: 10px;
+  margin: 10px;
 }
 .horarios .horarios__1_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__1;
+  border: dashed 3px black;
 }
 .horarios .horarios__2_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__2;
+  border: dashed 3px black;
 }
 .horarios .horarios__3_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__3;
+  border: dashed 3px black;
 }
 .horarios .horarios__4_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__4;
+  border: dashed 3px black;
 }
 .horarios .horarios__5_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__5;
+  border: dashed 3px black;
 }
 .horarios .horarios__6_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__6;
+  border: dashed 3px black;
 }
 .horarios .horarios__7_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__7;
+  border: dashed 3px black;
 }
 .horarios .horarios__8_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__8;
+  border: dashed 3px black;
 }
 .horarios .horarios__9_img {
   width: 100%;
   height: 90%;
   grid-area: horarios__9;
+  border: dashed 3px black;
 }
 .horarios .horarios__p {
   font-family: "Staatliches", cursive;
@@ -117,6 +134,7 @@
   border: dashed 3px black;
   padding: 5px;
   text-align: center;
+  margin-top: 10px;
 }
 .horarios .horarios__p .funciones {
   background-color: black;
@@ -236,7 +254,7 @@
   border: dashed 3px black;
   padding: 3px;
   display: inline-block;
-  margin-left: 180px;
+  margin-left: 160px;
 }
 
 .contacto {
@@ -399,6 +417,7 @@ header a.navbar__link:hover {
 .caja .cartelera {
   position: sticky;
   top: 0;
+  z-index: 3;
 }
 .caja .cartelera .bloque__cartelera {
   background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
@@ -425,56 +444,65 @@ header a.navbar__link:hover {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
   margin-top: 10%;
 }
 .caja .contenedorTotal .img-1 .imagen__2 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__3 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__4 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__5 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__6 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__7 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__8 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .img-1 .imagen__9 {
   width: 100%;
   height: 90%;
   margin-left: 3%;
-  box-shadow: 2px 1px 1px 1px rgba(11, 10, 10, 0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border: dashed 3px black;
 }
 .caja .contenedorTotal .sinopsis {
   grid-area: sinopsis;
@@ -680,16 +708,21 @@ footer .redes img {
     margin-right: 40px;
     margin-top: 50px;
   }
+  .precios-pagos p {
+    width: 33%;
+    text-align: center;
+  }
   .tabla__precios {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin: 30px;
+    display: grid;
+    text-align: center;
+  }
+  .tabla__precios .medios {
+    margin: 0;
   }
   .tabla__precios .medios table {
     width: 100%;
-    flex-direction: column;
+    font-size: 1.5rem;
+    margin: 0px;
   }
   .redes {
     display: none;
