--- a/scss/_horarios.scss
+++ b/scss/_horarios.scss
@@ -1,6 +1,7 @@
 .bloque{
     position: sticky;
     top: 0;
+    z-index: 3;
     .bloque__horarios{
         background-color: rgb(66, 65, 65);
         background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
@@ -9,7 +10,7 @@
         font-size: 3rem;
         text-align: center;
         border-top: solid 5px black;
-        border-bottom: solid 5px black;
+        border-bottom: solid 5px black;        
     }
 }
 .horarios{
@@ -21,57 +22,67 @@
     "horarios__4 horarios__5 horarios__6"
     "horarios__7 horarios__8 horarios__9";
     grid-gap: 10px;
+    margin: 10px;
     .horarios__1_img{
         width: 100%;
         height: 90%;
-        grid-area: horarios__1;    
+        grid-area: horarios__1; 
+        border: dashed 3px black;
     }
     .horarios__2_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__2;
+        border: dashed 3px black;
     }
     
     .horarios__3_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__3;
+        border: dashed 3px black;
     }
     
     .horarios__4_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__4;
+        border: dashed 3px black;
     }
     
     .horarios__5_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__5;
+        border: dashed 3px black;
     }
     
     .horarios__6_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__6;
+        border: dashed 3px black;
     }
     
     .horarios__7_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__7;
+        border: dashed 3px black;
     }
     
     .horarios__8_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__8;
+        border: dashed 3px black;
     }
     
     .horarios__9_img{
         width: 100%;
         height: 90%;
         grid-area: horarios__9;
+        border: dashed 3px black;
     }
     .horarios__p{
         font-family: $letraPrincipal;
@@ -80,6 +91,7 @@
         border:dashed 3px black;
         padding: 5px;
         text-align: center;
+        margin-top: 10px;
         .funciones{
             background-color: black;
             color: whitesmoke;
